Fix CustomerType, Customer