@@ -1,5 +1,7 @@
 package com.localbrand.controller;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,6 +19,8 @@ import com.localbrand.dtos.response.CustomerTypeDto;
 import com.localbrand.dtos.response.ResponseDto;
 
 import com.localbrand.service.ICustomerTypeService;
+
+import jakarta.validation.Valid;
 
 @RestController
 @RequestMapping("/customer_type")
@@ -39,70 +43,80 @@ public class CustomerTypeController {
 	
 	@PostMapping("/insert")
     public ResponseEntity<?> insert(@RequestBody CustomerTypeDto customerTypeDto) {
-		try {
-			if (customerTypeDto.getName().isBlank()) {
-	            return ResponseEntity.ok(new ResponseDto(List.of("Chưa điền tên loại khách hàng" ),HttpStatus.BAD_REQUEST.value(), null));
-			}
-			if (customerTypeDto.getStandardPoint() <= 0) {
-	            return ResponseEntity.ok(new ResponseDto(List.of("Nhập sai định dạng Standard_point" ), HttpStatus.BAD_REQUEST.value(), null));
-			}
-			if (customerTypeDto.getDiscountPercent() <= 0 ) {
-	            return ResponseEntity.ok(new ResponseDto(List.of("Nhập sai định dạng Discound_percent" ), HttpStatus.BAD_REQUEST.value(), null));
-			}
-	        CustomerTypeDto result = customerTypeService.insert(customerTypeDto);
-	        if (result != null)
-	        	return ResponseEntity.ok(new ResponseDto(List.of("Thêm thành công loại khách hàng" ), HttpStatus.OK.value(), result));
-	        return ResponseEntity.ok(new ResponseDto(List.of("Thêm thất bại loại khách hàng" ), HttpStatus.BAD_REQUEST.value(), null));
-		}
-		catch (Exception e) {
-	        return ResponseEntity.ok(new ResponseDto(List.of("Thêm thất bại loại khách hàng" ), HttpStatus.BAD_REQUEST.value(), null));
-		}
+		 List<String> msg = insertValidation(customerTypeDto);
+	        if (msg.size() > 0) {
+	            return ResponseEntity.badRequest().body(new ResponseDto(msg, HttpStatus.BAD_REQUEST.value(), ""));
+	        }      
+	            CustomerTypeDto result = customerTypeService.insert(customerTypeDto);		
+	    		ResponseEntity<?> res  = result != null ? ResponseEntity.ok(new ResponseDto(Arrays.asList("Thêm loại khách hàng thành công"), HttpStatus.OK.value(), result))
+	                    : ResponseEntity.badRequest().body(new ResponseDto(Arrays.asList("Thêm loại khách hàng thất bại"), HttpStatus.BAD_REQUEST.value(), null));		
+	    		return res;
 	}
 	
 	
 	@PutMapping("/update")
 	public ResponseEntity<?> update(@RequestBody CustomerTypeDto customerTypeDto) {
-		try {
-			if (customerTypeService.isUsingName(customerTypeDto.getName())) {
-				return ResponseEntity.ok(new ResponseDto(List.of("Tên loại khách hàng đã được sử dụng"), HttpStatus.BAD_REQUEST.value(), null));
-			}
-			if (customerTypeDto.getId() == null || customerTypeDto.getId().isBlank()) {
-		            return ResponseEntity.ok(new ResponseDto(List.of("ID loại khách hàng không hợp lệ"), HttpStatus.BAD_REQUEST.value(), null));
-		    }
-			if (customerTypeDto.getName().isBlank()) {
-	            return ResponseEntity.ok(new ResponseDto(List.of("Chưa điền tên loại khách hàng" ),HttpStatus.BAD_REQUEST.value(), null));
-			}
-			if (customerTypeDto.getStandardPoint() <= 0) {
-	            return ResponseEntity.ok(new ResponseDto(List.of("Nhập sai định dạng Standard_point" ), HttpStatus.BAD_REQUEST.value(), null));
-			}
-			if (customerTypeDto.getDiscountPercent() <= 0 ) {
-	            return ResponseEntity.ok(new ResponseDto(List.of("Nhập sai định dạng Discound_percent" ), HttpStatus.BAD_REQUEST.value(), null));
-			}
+		 List<String> msg = updateValidation(customerTypeDto);
+	        if (msg.size() > 0) {
+	            return ResponseEntity.badRequest().body(new ResponseDto(msg, HttpStatus.BAD_REQUEST.value(), ""));
+	        }
+	        
 			CustomerTypeDto result = customerTypeService.update(customerTypeDto);
-			
-			if (result != null) {
-		        return ResponseEntity.ok(new ResponseDto(List.of("Sửa thành công loại khách hàng"), HttpStatus.OK.value(), result));
-		    } else {
-		        return ResponseEntity.ok(new ResponseDto(List.of("Sửa thất bại loại khách hàng"), HttpStatus.BAD_REQUEST.value(), null));
-		    }
-		}
-			catch (Exception e) {
-	        return ResponseEntity.ok(new ResponseDto(List.of("Sửa thất bại loại khách hàng" ),  HttpStatus.BAD_REQUEST.value(), null));
-		}
+			ResponseEntity<?> res  = result != null ? ResponseEntity.ok(new ResponseDto(Arrays.asList("Cập nhật loại khách hàng thành công"), HttpStatus.OK.value(), result))
+	                : ResponseEntity.badRequest().body(new ResponseDto(Arrays.asList("Cập nhật loại khách hàng thất bại"), HttpStatus.BAD_REQUEST.value(), null));		
+			return res;
     }
 	
 	@DeleteMapping("delete")
 	public ResponseEntity<?> deleteById(@RequestParam String id) {
-		try {
-	        boolean result = customerTypeService.deleteById(id);
-	        if (result == true) {
-	        	return ResponseEntity.ok(new ResponseDto(List.of("Xóa thành công" ),  HttpStatus.OK.value(), result));
+		 List<String> msg = deleteValidation(id);
+	        if (msg.size() > 0) {
+	            return ResponseEntity.badRequest().body(new ResponseDto(msg, HttpStatus.BAD_REQUEST.value(), ""));
 	        }
-	        return ResponseEntity.ok(new ResponseDto(List.of("Id không tồn tại, xoá thất bại" ),  HttpStatus.BAD_REQUEST.value(), null));
-		}catch (Exception e) {
+	        
+			boolean result = customerTypeService.deleteById(id);
+			ResponseEntity<?> res  = result ? ResponseEntity.ok(new ResponseDto(Arrays.asList("Xóa loại khách hàng thành công"), HttpStatus.OK.value(), result))
+	                : ResponseEntity.badRequest().body(new ResponseDto(Arrays.asList("Xóa loại khách hàng thất bại"), HttpStatus.BAD_REQUEST.value(), null));
+			return res;
+    }
+	
+	
+    private List<String> insertValidation(CustomerTypeDto customerTypeDto) {
+        List<String> result = new ArrayList<>();
 
-	        return ResponseEntity.ok(new ResponseDto(List.of("Xóa thất bại" ), HttpStatus.BAD_REQUEST.value(), null));
-		}
+        if (customerTypeService.isExitsName(customerTypeDto.getName())) {
+            result.add("Tên đã tồn tại");
+        }
+        
+        if (customerTypeService.isExitsStandardPoint(customerTypeDto.getStandardPoint())) {
+        	result.add("Không được trùng điểm tiêu chuẩn");
+        }
+
+        return result;
+    }
+	
+	private List<String> updateValidation(CustomerTypeDto customerTypeDto) {
+        List<String> result = new ArrayList<>();
+        
+        if (customerTypeService.isExitsNameIgnore(customerTypeDto.getName(), customerTypeDto.getId())) {
+            result.add("Tên đã tồn tại");
+        }
+        
+        if (customerTypeService.isExitsStandardPointIgnore(customerTypeDto.getStandardPoint(), customerTypeDto.getId())) {
+        	result.add("Không được trùng điểm tiêu chuẩn");
+        }
+
+        return result;
+    }
+	
+    private List<String> deleteValidation(String categoryId) {
+        List<String> result = new ArrayList<>();
+
+        if (customerTypeService.isUsing(categoryId)) {
+            result.add("Loại khách hàng đang được sử dụng");
+        }
+
+        return result;
     }
 }
 
